--- a/Views/Partials/Footer.cshtml
+++ b/Views/Partials/Footer.cshtml
@@ -94,10 +94,14 @@
     </div>
 </div>
 
+@* added in master page after bundling
 <script src="~/js/circleslider.js"></script>
-<script src="~/js/jquery.min.js"></script>
+    @*Enable any one of this if required 
+@*<script src="~/js/jquery.min.js"></script> 
+@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="~/js/counterAnimation.js"></script>
 <script src="~/js/toggleAndWindowscroll.js"></script>
+*@
 
 <script>
     $(document).ready(function () {
