--- a/Views/ReplyUs/onReplyUs.cshtml
+++ b/Views/ReplyUs/onReplyUs.cshtml
@@ -41,16 +41,18 @@
                     <span id="Replydescription_error" class="ErrorMessage field-validation-error"></span>
                 </div>
                 <div class="form-group text-center">
-                    <button value="submit" type="submit" id="SubmitButton2" class="btn submit_btn white_text" role="button" onclick=" return register_validate11()">Submit</button>
+                    <button value="submit" type="submit" id="SubmitButton2" class="btn submit_btn white_text" role="button" onclick=" return register_validate15()">Submit</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
-<div id="successResult2" style="background-color:palegreen;color:blue;"></div>
 
+<div id="successResult2" style="background-color:palegreen;color:blue;"></div>
 <div id="errorResult2" style="background-color:palevioletred;color:red;"></div>
+
 <script>
+    debugger
     $('form.ajax').on('submit', function () {
         var that = $(this),
             url = that.attr('action'),
@@ -62,7 +64,7 @@
                 value = that.val();
             data[name] = value;
         });
-
+        debugger
         $.ajax({
             url: '@Url.Action("onReplyUs", "ReplyUs")',
             type: 'POST',
@@ -88,8 +90,8 @@
 </script>
 @*Validation *@
 <script>
-
-    function register_validate11() {
+    debugger
+    function register_validate15() {
         var name = document.getElementById('Replylastname').value;
         var email = document.getElementById('Replyemail').value;
         var Desc = document.getElementById('Replydescription').value;
@@ -134,6 +136,7 @@
 </script>
 @*for number*@
 <script>
+    debugger
     function restrictNumbers11(e) {
         var x = e.which || e.keycode;
         if ((x >= 67 && x <= 122) || x == 8 || (x >= 32 && x <= 40) || x == 46)
@@ -142,7 +145,9 @@
             return false;
     }
 </script>
+
 <script>
+    debugger
     var indexcount = 0;
     jQuery("input,alastname").on('keypress', function (e) {
         if (jQuery(this).val().length < 1) {
